--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "markitdown": "^0.0.4",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.10",
     "openai": "^4.104.0",
     "pdf-parse": "^1.1.1",
     "sentence-splitter": "^5.0.0"
