--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "dotenv": "^16.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.3",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
     "sanitize-html": "^2.17.0",
-    "sentence-splitter": "^5.0.0"
+    "sentence-splitter": "^5.0.0",
+    "sharp": "^0.34.5"
   },
   "scripts": {
     "start": "react-scripts start",
