feat: Implement user wallet management, transaction history, and deposit functionality.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,54 @@
-DB_HOST = hostname
-DB_USER = user
-DB_PASSWORD = password
-DB_DATABASE = database_name
-OPENAI_API_KEY = sk-proj-XXXXXXXXXXXXXXXX
-JWT_SECRET = secret
+# ==========================================
+# DATABASE CONFIGURATION
+# ==========================================
+DB_HOST=localhost
+DB_USER=chatbot_user
+DB_PASSWORD=your_secure_password_here
+DB_DATABASE=chatbot
+DB_PORT=3306
+
+# ==========================================
+# SERVER CONFIGURATION
+# ==========================================
+PORT=3001
+NODE_ENV=development
+FRONTEND_URL=http://localhost:3000
+
+# ==========================================
+# AUTHENTICATION
+# ==========================================
+JWT_SECRET=your_jwt_secret_minimum_32_characters_long
+JWT_EXPIRES_IN=7d
+
+# ==========================================
+# OPENAI API
+# ==========================================
+OPENAI_API_KEY=sk-proj-XXXXXXXXXXXXXXXX
+
+# ==========================================
+# EMAIL SERVICE (Optional)
+# ==========================================
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+EMAIL_FROM=noreply@yourdomain.com
+
+# ==========================================
+# PAYMENT (Optional - Stripe)
+# ==========================================
+STRIPE_SECRET_KEY=sk_test_XXXXXXXXXXXXXXXX
+STRIPE_PUBLISHABLE_KEY=pk_test_XXXXXXXXXXXXXXXX
+STRIPE_WEBHOOK_SECRET=whsec_XXXXXXXXXXXXXXXX
+
+# ==========================================
+# GOOGLE OAUTH (Optional)
+# ==========================================
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:3001/auth/google/callback
+
+# ==========================================
+# ENCRYPTION (for sensitive data)
+# ==========================================
+ENCRYPTION_KEY=your_32_character_encryption_key
