feat: Add VNPay payment gateway integration and wallet management functionality to the backend.

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,11 +29,13 @@
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.1",
     "markitdown": "^0.0.4",
+    "moment": "^2.30.1",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.10",
     "openai": "^4.104.0",
     "pdf-parse": "^1.1.1",
+    "querystring": "^0.2.1",
     "sentence-splitter": "^5.0.0",
     "sharp": "^0.34.5"
   },
