--- a/backend/package.json
+++ b/backend/package.json
@@ -30,11 +30,13 @@
     "mammoth": "^1.9.1",
     "markitdown": "^0.0.4",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.10",
     "openai": "^4.104.0",
     "pdf-parse": "^1.1.1",
+    "qs": "^6.13.0",
     "querystring": "^0.2.1",
     "sentence-splitter": "^5.0.0",
     "sharp": "^0.34.5"
