--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
+    "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.5.3",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.7.0",
     "sanitize-html": "^2.17.0",
     "sentence-splitter": "^5.0.0",
     "sharp": "^0.34.5"
