--- a/backend/.env.example
+++ b/backend/.env.example
@@ -42,6 +42,15 @@ STRIPE_PUBLISHABLE_KEY=pk_test_XXXXXXXXXXXXXXXX
 STRIPE_WEBHOOK_SECRET=whsec_XXXXXXXXXXXXXXXX
 
 # ==========================================
+# PAYMENT (VNPay)
+# ==========================================
+VNPAY_TMN_CODE=your_vnpay_tmn_code_here
+VNPAY_HASH_SECRET=your_vnpay_hash_secret_here
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=http://localhost:3001/wallet/vnpay/return
+
+
+# ==========================================
 # GOOGLE OAUTH (Optional)
 # ==========================================
 GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
