--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:18
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm install --include=optional
+RUN npm rebuild sharp
 COPY . .
 EXPOSE 3001
 CMD ["npx", "nodemon", "index.js"]
