--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.99.0",
+    "@react-three/fiber": "^8.15.16",
     "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.6",
@@ -17,7 +20,8 @@
     "recharts": "^3.7.0",
     "sanitize-html": "^2.17.0",
     "sentence-splitter": "^5.0.0",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "three": "^0.160.0"
   },
   "scripts": {
     "start": "react-scripts start",
