feat: Implement core chat functionality with advanced RAG, conversation management, and LLM integration.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,6 +24,7 @@ JWT_EXPIRES_IN=7d
 # OPENAI API
 # ==========================================
 OPENAI_API_KEY=sk-proj-XXXXXXXXXXXXXXXX
+COHERE_API_KEY=your_cohere_api_key_here
 
 # ==========================================
 # EMAIL SERVICE (Optional)
