--- a/backend/.env.example
+++ b/backend/.env.example
@@ -62,3 +62,5 @@ GOOGLE_REDIRECT_URI=http://localhost:3001/auth/google/callback
 # ENCRYPTION (for sensitive data)
 # ==========================================
 ENCRYPTION_KEY=your_32_character_encryption_key
+
+TAVILY_API_KEY=your_tavily_api_key_here
