--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,10 +21,12 @@ JWT_SECRET=your_jwt_secret_minimum_32_characters_long
 JWT_EXPIRES_IN=7d
 
 # ==========================================
-# OPENAI API
+# OPENAI AND COGNITIVE SERVICES
 # ==========================================
 OPENAI_API_KEY=sk-proj-XXXXXXXXXXXXXXXX
 COHERE_API_KEY=your_cohere_api_key_here
+AZURE_SPEECH_KEY=your_azure_speech_key_here
+AZURE_SPEECH_REGION=southeastasia
 
 # ==========================================
 # EMAIL SERVICE (Optional)
