--- a/backend/package.json
+++ b/backend/package.json
@@ -33,12 +33,15 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "fast-levenshtein": "^3.0.0",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "fuse.js": "^7.1.0",
     "googleapis": "^154.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.1",
     "markitdown": "^0.0.4",
+    "microsoft-cognitiveservices-speech-sdk": "^1.48.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "multer": "^2.0.2",
